--- a/src/features/counter/Counter.module.css
+++ b/src/features/counter/Counter.module.css
@@ -18,12 +18,11 @@
   padding-left: 16px;
   padding-right: 16px;
   margin-top: 2px;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
 .button {
   appearance: none;
-  background: none;
   font-size: 32px;
   padding-left: 12px;
   padding-right: 12px;
@@ -60,7 +59,7 @@
 }
 
 .asyncButton:after {
-  content: '';
+  content: "";
   background-color: rgba(112, 76, 182, 0.15);
   display: block;
   position: absolute;
@@ -73,7 +72,7 @@
 }
 
 .asyncButton:active:after {
-  width: 0%;
+  width: 0;
   opacity: 1;
   transition: 0s;
 }
